  o Fixed race condition during server shutdown.
  o OSC: outgoing audio levels from the audio mixer for each audio channel is
    now transmitted (pFS and dBFS).
  o Stage: Fixed bug where tweened transforms were only ticked when a
    corresponding layer existed.
  o Screen consumer: Added borderless option and correct handling of name
    option.
  o Version bump to keep up with CasparCG Client version.



CasparCG 2.0.4 Stable (as compared to 2.0.4 Beta 1)
===================================================

General
-------
  o Can now open media with file names that only consist of digits.
  o Miscellaneous stability and performance improvements.

Video mixer
-----------
  o Conditional compilation of chroma key support and straight alpha output
    support in shader (just like with blend-modes) because of performance impact
    even when not in use on a layer or on a channel. New <mixer /> element added
    to configuration for turning on mixer features that not everybody would want
    to pay for (performance-wise.) blend-modes also moved into this element.
  o Fixed bug where MIXER LEVELS interpreted arguments in the wrong order, so 
    that gamma was interpreted as max_input and vice versa.

Consumers
---------
  o Added support for NewTek iVGA, which enables the use of CasparCG Server 
    fill+key output(s) as input source(s) to a NewTek TriCaster without 
    requiring video card(s) in the CasparCG Server machine, or taking up inputs
    in the TriCaster. <newtek-ivga /> element in config enables iVGA on a
    channel.
  o Decklink: Created custom decklink allocator to reduce the memory footprint.
  o Replaced usage of SFML for <system-audio /> with PortAudio, because of
    problems with SFML since change to static linkage. Also PortAudio seems to
    give lower latency.

Producers
---------
  o FFmpeg: Added support for arbitrary FFmpeg options/parameters
    in ffmpeg_producer.
  o Flash: Flash Player 11.8 now tested and fully supported.